# rust-freetype

./: .gitignore  COPYRIGHT  Cargo.toml  Makefile.in  README.md  configure  freetype.rc  freetype.rs  tt_os2.rs
.github/workflows/: ci.yml
etc/: bindgen.sh  bindings.h
src/: freetype.rs  lib.rs  tt_os2.rs
