[package]
description = "Bindings for Freetype used by Servo"
license = "Apache-2.0 / MIT"
name = "freetype"
version = "0.4.1"
authors = ["The Servo Project Developers"]
documentation = "https://doc.servo.org/freetype/"
repository = "https://github.com/servo/rust-freetype"

[features]
default = ["servo-freetype-sys", "build-native-freetype"]
# Enabling "build-native-freetype" in this crate also enables the feature with the same name in
# the servo-freetype-sys crate.
build-native-freetype = ["servo-freetype-sys/build-native-freetype"]

[lib]
name = "freetype"
crate-type = ["rlib"]

[dependencies]
servo-freetype-sys = { version = "4.0.2", optional = true, default-features = false }
libc = "0.2"
