[package]
name = "freetype"
version = "0.7.1"
authors = ["The Servo Project Developers"]
description = "Bindings for FreeType used by Servo."
documentation = "https://docs.rs/freetype"
repository = "https://github.com/servo/rust-freetype"
license = "MIT OR Apache-2.0"

[lib]
name = "freetype"
crate-type = ["rlib"]

[dependencies]
freetype-sys = { version = "0.19.0", optional = true }
libc = "0.2"

[features]
default = ["freetype-sys"]
